<resources>
    <string name="app_name">NewSplash</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="settings">Settings</string>

    <string name="menu_photo">Photo</string>
    <string name="menu_album">Gallery</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_err_swipe_retry">Load failed, drop - down retry</string>
    <string name="page_normal">Normal</string>
    <string name="page_curated">Curated</string>
    <string name="label_latest">Latest</string>
    <string name="label_oldest">Oldest</string>
    <string name="label_popular">Popular</string>
    <string name="label_random">Random</string>
    <string name="total_photos">photos</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="photo_create">Create</string>
    <string name="exif_manufacturer">Manufacturer</string>
    <string name="exif_model">Model</string>
    <string name="exif_size">Size</string>
    <string name="exif_focal">FocalLength</string>
    <string name="exif_aperture">Aperture</string>
    <string name="exif_exposure">ExposureTime</string>
    <string name="exif_iso">ISO</string>
    <string name="exif_color">Color</string>
    <string name="none">None</string>
    <string name="title_activity_collection_acticity">CollectionActicity</string>
    <string name="user_create">Created</string>
    <string name="loading_err_tap_retry">Failed to load. Click the figure above to retry</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="loading">Londing</string>
    <string name="page_photo">Photo</string>
    <string name="page_like">Like</string>
    <string name="page_collection">Collection</string>
    <string name="loading_nodata">No data</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_none">None</string>
    <string name="search_portait">Portrait</string>
    <string name="search_landscape">Landscape</string>
    <string name="search_square">Square</string>
    <string name="permission_error">Lack of critical permissions</string>
    <string name="quality_title">Image quality</string>
    <string name="qulaity_raw">Raw</string>
    <string name="quality_full">Full</string>
    <string name="quality_reqular">Regular</string>
    <string name="quality_small">Small</string>
    <string name="bt_only">Only this</string>
    <string name="bt_no_ask">No longer ask</string>
    <string name="download_alert_title">Alert</string>
    <string name="download_alert_content">If you are in a non-wifi environment, there may be a charge for downloading images</string>
    <string name="bt_cancel">Cancel</string>
    <string name="downloading_title">Downloading</string>
    <string name="shared_photo" translatable="false">photo</string>
    <string name="shared_user" translatable="false">user</string>
    <string name="shared_name" translatable="false">name</string>

    <string name="title_activity_full_photo">FullPhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_favorite">Favorite</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_msg">Whether or not to clear all the collection records</string>
    <string name="bt_ok">Ok</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting_clear">Clear cache</string>
    <string name="setting_download">Download Folder</string>
    <string name="setting_clearing">Clearing</string>
    <string name="setting_download_quality">Download Quality</string>
    <string name="setting_cache_msg">Whether to empty the cache (using the cache can improve loading speed)</string>
    <string name="delete_alert_msg">You have downloaded the image, please select the action to perform</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_return">Return</string>
    <string name="bt_view">View</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="title_select">Please Select</string>
    <string name="junp_failed">Jump failed</string>
    <string name="wallpaper_download">Wallpaper Downloading</string>
    <string name="wallpaper_quality_title">Wallpaper quality</string>
    <string name="title_activity_auto_wallpaper">Settings</string>
    <string name="menu_auto_wallpaper">Automatic wallpaper</string>
    <string name="menu_senior">Senior</string>
    <string name="setting_enable">Enable</string>
    <string name="setting_disable">Disable</string>
    <string name="setting_open_auto">Automatic wallpaper change is enabled</string>
    <string name="setting_close_auto">Automatic wallpaper change is off</string>
    <string name="setting_auto_on_off">Switch</string>
    <string name="auto_conditions">Conditions</string>
    <string name="auto_only_wifi">Change only on WiFi</string>
    <string name="auto_any_net">Any network</string>
    <string name="auto_net">WiFi</string>
    <string name="auto_interval">Interval</string>
    <string name="auto_style">Style</string>
    <string name="auto_shape">Wallpaper shape</string>
    <string name="auto_clip">Clip</string>
    <string name="auto_other">Other</string>
    <string name="auto_screen">Screenn</string>
    <string name="setting_wallpaper_quality">Wallpaper quality</string>
    <string name="title_wallpaper_quality">Please select the image quality when downloading the wallpaper</string>
    <string name="title_download_quality">Please select the quality of the images to download</string>
    <string name="download_notify">Download to</string>
</resources>
